--- a/forms/mainWindow.ui
+++ b/forms/mainWindow.ui
@@ -86,7 +86,13 @@
      <item row="0" column="0">
       <widget class="QListWidget" name="usersListWidget">
        <property name="focusPolicy">
-        <enum>Qt::ClickFocus</enum>
+        <enum>Qt::StrongFocus</enum>
+       </property>
+       <property name="contextMenuPolicy">
+        <enum>Qt::DefaultContextMenu</enum>
+       </property>
+       <property name="editTriggers">
+        <set>QAbstractItemView::DoubleClicked|QAbstractItemView::EditKeyPressed</set>
        </property>
       </widget>
      </item>
